[package]
name = "leetcode-meta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "~3.1.0" }
env_logger = { version = "0.9.0" }
log = { version = "0.4.17" }
regex = { version = "1.5.6" }
syn = { version = "1.0.95", features = ["full", "extra-traits"] }
quote = { version = "1.0.18" }
proc-macro2 = { version = "1.0.39" }
lazy_static = {version = "1.4.0" }
ctor = { version = "0.1.22" }

[dev-dependencies]
rand = { version = "0.8.5" }
